# previewproxy

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: ci.yml
src/: app.rs  cli.rs  main.rs
src/common/: mod.rs  pagination.rs
src/common/config/: loader.rs  mod.rs  telemetry.rs
src/common/errors/: mod.rs
src/common/extractors/: json.rs  mod.rs  path.rs
src/common/middlewares/: basic_auth.rs  cors.rs  mod.rs  normalize_path.rs  request_id.rs  timeout.rs
src/modules/: mod.rs
src/modules/cache/: disk.rs  inflight.rs  manager.rs
src/modules/cli/: args.rs  cli.rs  mod.rs
src/modules/cli/dto/: mod.rs
src/modules/cli/subcommands/: mod.rs  serve.rs  upgrade.rs
src/modules/health/: controller.rs  mod.rs
src/modules/proxy/: controller.rs  fetchable.rs  mod.rs  params.rs  service.rs
src/modules/proxy/dto/: mod.rs  params.rs  response.rs
src/modules/proxy/sources/: http.rs  mod.rs  router.rs  s3.rs  video.rs
src/modules/security/: allowlist.rs  hmac.rs  mod.rs
src/modules/transform/: mod.rs  pipeline.rs  test_helpers.rs
src/modules/transform/ops/: blur.rs  color.rs  decode.rs  encode.rs  gif_anim.rs  mod.rs  resize.rs  rotate.rs  watermark.rs
tests/: integration_test.rs  upgrade_integration.rs
